--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.6",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.4",
     "pinia": "^2.0.35",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
